# testdjereo

./: .commitlintrc.ts  .copier-answers.yml  .dockerignore  .env.in  .env.test  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-config.json  .typos.toml  CHANGELOG.md  README.md  SCRATCH.md  biome.jsonc  justfile  manage.py  noxfile.py  pyproject.toml
.github/actions/containerise/: action.yaml
.github/actions/django-checks/: action.yaml
.github/actions/pre-commit/: action.yaml
.github/actions/service-health/: action.yaml
.github/actions/sys-check/: action.yaml
.github/actions/test/: action.yaml
.github/workflows/: _playwright_axe.yaml  _playwright_e2e.yaml  _pre-build-checks.yaml  ci.yaml  on-tag.yaml  pr.yaml  release-please.yaml
_db/: set_up.sql  tear_down.sql
_deploy/: .env.deploy  README.md  SCRATCH.md  TODO.md  deploy.Dockerfile  deploy.Dockerfile.dockerignore  droplet_images.json  droplet_sizes.json  nginx.conf  pyproject.toml
_deploy/DO_deploy/: _DO_types.py  _utils.py  check_deployment_health.py  check_service_health.py  list_droplet_IPs.py  upload_deployment_script.py
_deploy/DO_deploy/deploy/: _types.py  blue_green_deploy.py
_deploy/DO_deploy/deploy/nginx/: app.conf.template
_deploy/DO_deploy/infra/: _types.py  _utils.py  apply.py
_deploy/DO_deploy/infra/cloud_config_templates/: app_server.yaml.jinja  postgres_server.yaml.jinja
_deploy/DO_deploy/infra/env_blueprints/: _sample.py.txt  live.py  test.py
_deploy/cloud_config_templates/: app_server.yaml.jinja  postgres_server.yaml.jinja
_deploy/env_blueprints/: _sample.py.txt  live.py  test.py
_deploy/testdjereo_deploy/: _types.py  _utils.py
_deploy/testdjereo_deploy/infra/: _consts.py  _types.py  _utils.py  apply.py
_deploy/testdjereo_deploy/infra/blueprints/: live.py  test.py
_deploy/testdjereo_deploy/infra/cloud-config/: app_server.yaml  app_server.yaml.jinja  postgres_server.yaml  postgres_server.yaml.jinja
_deploy/testdjereo_deploy/infra/cloud_config_templates/: app_server.yaml.jinja
_deploy/testdjereo_deploy/infra/env_blueprints/: _sample.py.txt
db/: set_up.sql  tear_down.sql
docs/: README-dev.md
testdjereo/: __init__.py  admin.py  apps.py  asgi.py  checks.py  context_processors.py  logging.py  main.py  middleware.py  models.py  settings.py  test.py  urls.py  wsgi.py
testdjereo/management/commands/: seed_database.py
testdjereo/static/testdjereo/: htmx-2.0.4.min.js  mvp.css
testdjereo/templates/: 403.html  404.html  500.html  _base.html  index.html
testdjereo/templates/admin/: base.html
testdjereo/tests/: test_admin.py  test_checks.py  test_context_processors.py  test_logging.py  test_middleware.py  test_models.py  test_templates.py  test_views.py
testdjereo/tests/management/commands/: test_seed_database.py  test_seed_database.py.ninja
testdjereo/tests/test_app/: apps.py  models.py  views.py
testdjereo/tests/test_app/migrations/: 0001_initial.py
tests/: test_migrations.py
tests/testdjereo/: test_checks.py  test_testdjereo.py
tests_e2e/: __init__.py  conftest.py  test_accessibility.py  test_auth.py  test_homepage.py
users/: admin.py  factories.py  forms.py  models.py  signals.py
users/django_allauth/: adapter.py
users/migrations/: 0001_initial.py  0002_userprofile.py  0003_add_authuser_updated_at.py  0003_alter_authuser_manager.py  max_migration.txt
users/templates/account/: login.html
users/templates/allauth/layouts/: base.html
users/tests/: test_factories.py  test_models.py  test_signals.py
users/tests/django_allauth/: test_adapter.py
