# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "testdjereo"
version = "0.0.0"
description = ""
authors = [
    {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"}
]
readme = "README.md"
# create 'LICENSE' file and uncomment below line
# license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "django-alive>=2.0.0,<3.0.0",
    "django>=5.2,<7.0",
    "django-allauth>=65.12.0,<66.0.0",
    "django-csp>=4.0,<5.0",
    "django-htmx>=1.26.0,<2.0.0",
    "django-linear-migrations>=2.19.0,<3.0.0",
    "django-permissions-policy>=4.28.0,<5.0.0",
    "django-structlog>=9.1.1,<10.0.0",
    "django-version-checks>=1.16.0,<2.0.0",
    "django-waffle>=5.0.0,<6.0.0",
    "environs[django]>=14.3.0,<15.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "psycopg[binary]>=3.2.10,<4.0.0",
    "psycopg-pool>=3.2.6,<4.0.0",
    "whitenoise[brotli]>=6.11.0,<7.0.0",
]

[dependency-groups]
test = [
    "axe-playwright-python>=0.1.5",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "coverage>=7.10.7,<8.0.0",
    "factory-boy>=3.3.3,<4.0.0",
    "parameterized>=0.9.0,<1.0.0",
    "playwright>=1.56.0,<2.0.0",
    "pytest>=9.0.0,<10.0.0",
    "requests>=2.32.5,<3.0.0",
    "responses>=0.25.8",
    "tblib>=3.1.0",
]
dev = [
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.0.0,<7.0.0",
    "ipdb>=0.13.13",
    "ipython>=9.6.0,<10.0.0",
    "rich>=14.2.0",
]

[project.urls]
Repository = "https://github.com"

[tool.setuptools.packages.find]
# allow `pip install -e .` to find the project package
include = ["testdjereo"]

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.ruff]
exclude = [".pdbrc"]
indent-width = 4
line-length = 90
target-version = "py314"

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # flake8-print
    "T20",
    # pycodestyle warnings
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
"tests_e2e/**.py" = ["S"]
"**/tests/**.py" = ["S"]
"manage.py" = ["E501"]
"testdjereo/settings.py" = ["E501"]
"testdjereo/asgi.py" = ["E501"]
"testdjereo/wsgi.py" = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"testdjereo.settings".msg = "Do not import project settings module - use `from django.conf import settings` instead"

[tool.pytest.ini_options]
markers = [
    "axe",
]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/migrations/*",
    "noxfile.py",
    "*/tests/*",
    "*/tests_e2e/*",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if settings.debug",
]

[tool.coverage.run]
source = [
    "./testdjereo/",
]
omit = [
    "manage.py",
    "*/tests/*",
    "testdjereo/asgi.py",
    "testdjereo/wsgi.py",
    "testdjereo/settings.py",
]

[tool.uv.workspace]
members = [
    "_deploy",
]
